# pretino

./: .gitignore  .platform.app.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.platform/: routes.yaml
pretino/: __main__.py  settings.py  webapp.py
schemas/: api_keys.json  question_mapping.json
