[project]
name = "pretino"
version = "0.1.0"
description = "Pretix connector for the ITNOG events"
authors = [
    {name = "Marco Mazetti",email = "marco@itnog.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "fastapi (>=0.120.1,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "starlette (>=0.49.1,<0.50.0)",
    "pydantic-core (>=2.37.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^7.0.0"
bandit = "^1.8.3"
pylint = "^4.0.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry.scripts]
pretino = "pretino.__main__:main"
